--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="sd" ><h1> Student Dashboard</h1></div>
-  <div class="section1">
+  <div class="section">
     <h2>Student Profile</h2>
     <label>Name: <input type="text" id="name"></label><br><br>
     <label>Birth Year: <input type="number" id="birthYear"></label><br><br>
@@ -31,8 +31,8 @@
 
   <div class="section">
     <h2>Basic Calculator</h2>
-    <input type="number" id="num1" placeholder="Enter num 1"><br>
-    <input type="number" id="num2" placeholder="Enter num 2"><br>
+    <input type="number" id="num1" placeholder="Enter num 1"><br><br>
+    <input type="number" id="num2" placeholder="Enter num 2"><br><br>
     <button onclick="calculate('add')">Add</button>
     <button onclick="calculate('sub')">Subtract</button>
     <button onclick="calculate('mul')">Multiply</button>
