--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div id="sd" ><h1> Student Dashboard</h1></div>
   <div class="section">
     <h2>Student Profile</h2>
-    <label>Name: <input type="text" id="name"></label><br><br>
+    <label>Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="name"></label><br><br>
     <label>Birth Year: <input type="number" id="birthYear"></label><br><br>
-    <label>City: <input type="text" id="city"></label><br><br>
+    <label>City:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="city"></label><br><br>
     <button onclick="saveProfile()">Profile</button>
     <p id="profileOutput"></p>
   </div>
